--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -27,7 +27,7 @@ article {
 
 section {
 	max-width: 1100px;
-	margin: 0 auto 30px;
+	margin: 0 auto;
 	padding-top: 1px;
 	@media(max-width: @mobile-breakpoint) {
 		margin: 0 auto;
