--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -11,6 +11,9 @@
 	position: relative;
 	background: none;
 	width: 100%;
+	@media(max-width: @mobile-breakpoint) {
+		 margin: 10px auto 30px;
+	}
 
 	.older-posts {
 		position: absolute;
