--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -40,6 +40,7 @@
   .details {
     display: inline-block;
     float: left;
+    margin: 5px 0 10px;
 
     span {
       display: block;
@@ -166,6 +167,5 @@
   @media(max-width: @mobile-breakpoint) {
     display: block;
     margin: 0 0 20px;
-    width: auto!important;
   }
 }
