--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -4,7 +4,7 @@
     &.python {
       border: 1px solid #d0dff2;
       background: #e5f1ff;
-      color: #4b5260;
+      color: #3c4b6a;
 
       .meta {
         color: #6c6c6c !important;
@@ -50,7 +50,7 @@
 
       .class,
       .title {
-        color: #ce8c20 !important;
+        color: #155a7d !important;
         font-weight: 900;
         font-family: 'dm';
       }
