nextprev container visibility

--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -2,7 +2,7 @@
   background: white;
   padding: 30px;
   min-height: 85px;
-  margin: 15px auto;
+  margin: 0 auto 15px;
   justify-content: space-between;
   display: flex;
   max-width: 100%;
