--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -89,8 +89,9 @@
         font-family: 'TTNormsPro-Medium', sans-serif !important;
         margin-right: 8px;
         font-size: 13px;
+        white-space: nowrap;
         @media(max-width: @mobile-breakpoint) {
-          min-width: 50px;
+          min-width: 54px;
           margin-right: 2px;
           font-weight: normal;
           font-size: 0.9em;
