--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -242,7 +242,6 @@ nav {
 	height: 50px;
 	text-align: center;
 	position: relative;
-	border-bottom: 1px solid #efefef;
 	@media(max-width: @mobile-breakpoint) {
 		height: 42px;
 	}
@@ -789,8 +788,9 @@ nav {
 	display: none;
 	max-width: 260px;
 	justify-content: space-between;
+	align-items: center;
 	margin: auto;
-	padding-top: 14px;
+	height:51px;
 
 	a {
 		color: @text-color;
