--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -232,7 +232,7 @@
 		font-weight: 100;
 	}
 
-	.news-description {
+	.newsletter-description {
 		margin: 5px 0 15px;
 		line-height: 1.5;
 		font-size: 0.8em !important;
