--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -18,7 +18,7 @@
       padding: 0;
       max-width: none;
       width: auto;
-      margin: 0 0 15px;
+      margin: 5px 0 15px;
       justify-content: space-between;
     }
 
