--- a/src/less/posts/newsletter-widget.less
+++ b/src/less/posts/newsletter-widget.less
@@ -13,7 +13,7 @@
     margin: 0 0 10px;
   }
 
-  .news-description {
+  .newsletter-description {
     font-size: .85em;
     line-height: 1.4;
     box-shadow: 0;
