moz available fix

--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -117,11 +117,10 @@
 
         .info {
           width: -webkit-fill-available;
-          width: -moz-fill-available;
+          width: -moz-available;
           display: flex;
           flex-direction: row;
           flex-wrap: wrap;
-          max-width: 80%;
 
           @media(max-width: @mobile-breakpoint) {
             max-width: 90%;
