moz available fix

--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -88,7 +88,7 @@
   .sort-container {
     display: flex;
     width: -webkit-fill-available;
-    width: -moz-fill-available;
+    width: -moz-available;
     height: 29px;
     margin-bottom: 20px;
     background: #ffffff;
