--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -177,7 +177,7 @@ nav {
 				justify-content: space-around;
 				align-items: center;
 				height: -webkit-fill-available;
-				height: -moz-fill-available;
+				height: -moz-available;
 				height: 50px;
 				@media(max-width: @mobile-breakpoint) {
 					width: 300px;
@@ -255,7 +255,7 @@ nav {
 		justify-content: space-around;
 		align-items: center;
 		height: -webkit-fill-available;
-		height: -moz-fill-available;
+		height: -moz-available;
 		max-width: 580px;
 		height: 45px;
 		@media(max-width: @mobile-breakpoint) {
@@ -366,7 +366,7 @@ nav {
 		position: relative;
 		z-index: 10;
 		height: -webkit-fill-available;
-		height: -moz-fill-available;
+		height: -moz-available;
 
 		#account {
 			width: 35px;
@@ -566,7 +566,7 @@ nav {
 			justify-content: space-around;
 			align-items: center;
 			height: -webkit-fill-available;
-			height: -moz-fill-available;
+			height: -moz-available;
 			height: 50px;
 			max-width: 580px;
 			@media(max-width: @mobile-breakpoint) {
