--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -8,7 +8,7 @@
 	padding: 40px;
 	margin:  0 0 20px;
 	width: -webkit-fill-available;
-	width: -moz-fill-available;
+	width: -moz-available;
 	box-shadow: @shadow-color;
 	@media(max-width: @tablet-breakpoint) {
 		margin: 0 auto 20px;
