--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -242,11 +242,11 @@
 
 	.form-group {
 		width: -webkit-fill-available;
-		width: -moz-fill-available;
+		width: -moz-available;
 
 		input {
 			width: -webkit-fill-available !important;
-			width: -moz-fill-available !important;
+			width: -moz-available !important;
 		}
 	}
 
@@ -305,7 +305,7 @@
 	input[type="email"] {
 		border: 1px solid #d5dbe6 !important;
 		width: -webkit-fill-available;
-		width: -moz-fill-available;
+		width: -moz-available;
 		padding: 13px;
 		background: #fff;
 		font-size: 12px;
