--- a/src/less/projects/picker.less
+++ b/src/less/projects/picker.less
@@ -31,7 +31,7 @@
     }
     @media(max-width: @mobile-breakpoint) {
       width: -webkit-fill-available;
-      width: -moz-fill-available;
+      width: -moz-available;
     }
   }
 
