--- a/src/less/pages/page.less
+++ b/src/less/pages/page.less
@@ -6,6 +6,12 @@
     font-weight: 100;
   }
 
+  .page-container {
+    margin-bottom: 30px;
+    @media(max-width: @tablet-breakpoint) {
+      margin-bottom: 0;
+    }
+
   .main-content {
     box-shadow: 0 0 5px rgba(65,67,144,.15);
     background: white;
@@ -14,4 +20,5 @@
       font-family: 'TTNormsPro-Medium', sans-serif;
     }
   }
+}
 }
