--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -35,7 +35,7 @@ section {
 }
 
 strong {
-	font-family: @body-font-bold;
+	font-family: @bold-font;
 	color: @grey-header;
 }
 
@@ -60,12 +60,12 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: @body-font-bold;
+	font-family: @bold-font;
 	font-weight: 700;
 }
 
 h3 {
-	font-family: @body-font-bold;
+	font-family: @bold-font;
 }
 
 .h2,
