--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -741,7 +741,7 @@ nav {
 
 		button {
 			border: none;
-			font-family: @body-font-bold !important;
+			font-family: @bold-font !important;
     	font-weight: 100;
 			font-size: 0.9em;
 			padding: 0;
@@ -794,7 +794,7 @@ nav {
 
 	a {
 		color: @text-color;
-		font-family: @body-font-bold;
+		font-family: @bold-font;
 		transition: @transition;
 
 		&:hover {
