--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -229,7 +229,7 @@
 
 				span {
 					line-height: 1.2;
-					font-family: @body-font-bold;
+					font-family: @bold-font;
 					transition: @transition;
 					@media(max-width: @mobile-breakpoint) {
 						font-weight: 100;
@@ -346,7 +346,7 @@
 		padding: 14px 22px;
 		background: @button-color;
 		color: white;
-		font-family: @body-font-bold;
+		font-family: @bold-font;
 		font-size: 16px;
 		line-height: 1;
 		text-transform: uppercase;
