--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -143,10 +143,10 @@
   }
 
   .tableau {
-    color: #af7409 !important;
+    color: #ec9605 !important;
 
     * {
-      color: #af7409 !important;
+      color: #ec9605 !important;
     }
   }
 
