--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -59,7 +59,7 @@
 
 // Font Styles
 @body-font: 'TTNormsPro-Regular', sans-serif;
-@body-font-bold: 'TTNormsPro-Medium', sans-serif;
+@bold-font: 'TTNormsPro-Medium', sans-serif;
 @header-font: 'TTNormsPro-Regular', sans-serif;
 @header-font-bold: 'TTNormsPro-Medium', sans-serif;
 
