--- a/src/less/pages/page.less
+++ b/src/less/pages/page.less
@@ -17,7 +17,7 @@
       background: white;
 
       a {
-        font-family: 'TTNormsPro-Medium', sans-serif;
+        font-family: @bold-font;
       }
     }
   }
