--- a/src/less/pages/tag.less
+++ b/src/less/pages/tag.less
@@ -370,7 +370,7 @@
           bottom: 20px;
           right: 20px;
           font-size: 0.8em;
-          font-family: @body-font-bold;
+          font-family: @bold-font;
         }
       }
     }
