--- a/src/less/posts/postmeta.less
+++ b/src/less/posts/postmeta.less
@@ -52,7 +52,7 @@
 
       span {
         font-size: 0.9em;
-        font-family: @body-font-bold;
+        font-family: @bold-font;
         @media(max-width: @tablet-breakpoint) {
           font-size: 0.85em;
         }
