--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -61,7 +61,7 @@
     margin: auto;
     top: 92px;
     border: 3px solid white;
-    box-shadow: 2px 2px 2px rgba(20, 24, 53, 0.15);
+    box-shadow: 1px 1px 0 rgba(20, 24, 53, 0.15);
     @media(max-width: 1040px) {
       margin: 0 auto;
       display: block;
