--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -68,7 +68,7 @@
     font-size: 1.5em;
     margin-bottom: 0;
     line-height: 1;
-    font-family: @body-font-bold;
+    font-family: @bold-font;
     @media(max-width: @mobile-breakpoint) {
       font-size: 1.3em;
     }
