--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -31,6 +31,14 @@ blockquote pre {
       color: white;
     }
 
+    @media(max-width: @mobile-breakpoint) {
+      .mobile-full-width();
+      max-height: unset !important;
+      padding: 0 !important;
+      border-radius: 0 !important;
+      white-space: pre !important;
+    }
+
     code {
       overflow-y: hidden;
       position: relative;
@@ -46,7 +54,11 @@ blockquote pre {
         overflow-y: hidden;
         line-height: 1.5;
         white-space: pre-line;
+        border-right: 0;
+        border-left: 0;
       }
+
+
     }
 
     span {
@@ -170,6 +182,7 @@ blockquote pre {
 }
 
 .fullWidth {
+  /*
   @media(max-width: @mobile-breakpoint) {
     margin-left: calc(-50vw + 50%) !important;
     margin-right: calc(-50vw + 50%) !important;
@@ -177,6 +190,7 @@ blockquote pre {
     padding: 0 !important;
     border-radius: 0 !important;
   }
+  */
 
   pre {
     font-size: unset;
