--- a/src/less/posts/related-posts.less
+++ b/src/less/posts/related-posts.less
@@ -35,13 +35,12 @@
       background-size: cover !important;
       margin-bottom: 15px;
       @media(max-width: 600px) {
-        width: 90px;
+        width: 120px;
         height: 90px;
-        min-width: 90px;
+        min-width: 120px;
         background-size: cover !important;
         float: left;
         margin-bottom: 0;
-        border-right: 1px solid #d5d5d5;
       }
     }
 
@@ -54,18 +53,17 @@
       }
 
       .related-post-title {
-        font-size: 1.1em;
-        font-family: 'TTNormsPro-Medium', sans-serif;
-        height: 65px;
+        font-family: @bold-font;
+        height: 60px;
         overflow: hidden;
-        line-height: 1.3;
+        line-height: 1.2;
         display: -webkit-box;
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         overflow: hidden;
         width: -webkit-fill-available;
         margin: 0;
-        color: #55575d;
+        color: @grey-header;
       }
     }
   }
