--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -62,6 +62,7 @@ table {
   border-radius: 3px;
   border: 1px solid #e6edf0;
   margin: 30px 0;
+  max-height: 539px;
   @media (max-width:600px) {
     margin-left: calc(-50vw + 50%) !important;
     margin-right: calc(-50vw + 50%) !important;
@@ -127,10 +128,9 @@ table {
 
           th {
             display: table-row;
-            height: 62px !important;
             margin-left: 5px;
             padding: 0;
-            line-height: 3;
+            line-height: 4.55;
             font-family: @body-font;
             letter-spacing: 0.5px;
             text-align: left;
