separate widget styles

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -4,3 +4,10 @@
 @import './global/author-card.less';
 @import './global/social.less';
 @import './global/search.less';
+
+/* Individual Widget Styles */
+@import './global/widgets/newsletter-widget.less';
+@import './global/widgets/recent-widget.less';
+@import './global/widgets/series-widget.less';
+@import './global/widgets/social-widget.less';
+@import './global/widgets/tag-widget.less';
