--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -55,7 +55,7 @@
               </fieldset>
 
               <fieldset>
-                <h2>The Blow-Our-Fucking-Minds Stuff</h2>
+                <h2>The Blow-Our-Minds Stuff (Optional)</h2>
                 <p id="application_notes">
                   If you'd like to provide any of the information below to sweeten the deal, have it!
                 </p>
@@ -75,14 +75,6 @@
                   <div class="input-field-group">
                     <label for="application_twitter">Twitter</label>
                     <input class="form-control" id="application_twitter" placeholder="https://twitter.com/YourHandle" maxlength="40" name="twitter" type="text" onblur="">
-                  </div>
-                  <div class="input-field-group">
-                    <label for="application_myspace">MySpace</label>
-                    <input class="form-control" id="application_myspace" placeholder="http://www.myspace.com/emokid666" maxlength="40" name="myspace" type="text" onblur="">
-                  </div>
-                  <div class="input-field-group">
-                    <label for="application_ssn">Social Security Number</label>
-                    <input class="form-control" id="application_ssn" placeholder="000-00-0000" maxlength="12" name="ssn" type="text" onblur="">
                   </div>
                 </div>
               </fieldset>
