--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -141,6 +141,7 @@ input[type="email"],
 input[type="password"] textarea {
 	padding: 7px;
 	.transition(all 0.2s);
+	font-family: 'TTNormsPro-Regular', sans-serif;
 
 	&:focus {
 		border: 1px solid @theme-color;
