--- a/src/less/global/social.less
+++ b/src/less/global/social.less
@@ -135,7 +135,7 @@
 
       &:hover {
         background-color: lighten(@rss-color, 20%) !important;
-        color: white;
+        color: white !important;
       }
     }
 
