--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -52,7 +52,7 @@
 			line-height: 1.2;
 			font-size: 15px;
 			margin: 0;
-			font-family: @bold-font;
+			font-family: @body-font;
 			display: inline-block;
 
 			&:hover {
