--- a/custom-transactional.hbs
+++ b/custom-transactional.hbs
@@ -1,31 +1,19 @@
-<!DOCTYPE html>
-<html lang="{{@site.lang}}" class="transactional">
-
-<head>
-	{{! Document Settings }}
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	{{! Page Meta }}
-	<title>{{meta_title}}</title>
-	<meta name="HandheldFriendly" content="True" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-	{{! Styles }}
-</head>
-
-<body class="transactional">
+{{!< default}}
 	<!-- start site's main content area -->
 	{{#post}}
 		<section>
 			<div class="page-container">
-				<h1 class="post-title">{{{title}}}</h1>
-				{{{body}}}
+				<main class="main-content">
+					<h1 class="post-title">{{{title}}}</h1>
+					<p>{{content}}</p>
+					<a href="{{@site.url}}">
+						<button type="submit" label="submit" class="btn btn-primary">Back home</button>
+					</a>
+				</main>
 			</div>
 		</section>
 	{{/post}}
 	{{#contentFor "scripts"}}
 		<script async src="{{asset "js/transactional.js"}}"></script>
 	{{/contentFor}}
-</body>
-
-</html>
 <!-- end site's main content area -->
