--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -10,22 +10,24 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.2/css/fontawesome.css" integrity="sha384-fqilzf6i0kkOYm+DT4UC9pWzYf4/eFdJKroY1jZyE7n8eYLujyYM9VCucGf/LdVD" crossorigin="anonymous">
 </noscript>
 <script>
-       const loadDeferredStyles = function() {
-       const addStylesNode = document.getElementById("deferred-styles");
-       const replacement = document.createElement("div");
-       replacement.innerHTML = addStylesNode.textContent;
-       document.body.appendChild(replacement);
-       addStylesNode.parentElement.removeChild(addStylesNode);
-     };
-     const raf = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
-         window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
-     if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
-     else window.addEventListener('load', loadDeferredStyles);
+  const loadDeferredStyles = function() {
+    const addStylesNode = document.getElementById("deferred-styles");
+    const replacement = document.createElement("div");
+    replacement.innerHTML = addStylesNode.textContent;
+    document.body.appendChild(replacement);
+    addStylesNode.parentElement.removeChild(addStylesNode);
+  };
+  const raf = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
+    window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
+  if (raf) raf(function() {
+    window.setTimeout(loadDeferredStyles, 0);
+  });
+  else window.addEventListener('load', loadDeferredStyles);
 </script>
 {{^is "post,home"}}
   <script async src="{{asset "js/pages.js"}}"></script>
-{{/is}}
-{{#is "tag"}}
-  <script async src="{{asset "js/tag.js"}}"></script>
-{{/is}}
-<!-- End Scripts -->
+  {{/is}}
+  {{#is "tag"}}
+    <script async src="{{asset "js/tag.js"}}"></script>
+  {{/is}}
+  <!-- End Scripts -->
