--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -3,8 +3,8 @@
   {{#if feature_image}}
     <a class="imagewrapper" href="{{url}}">
       <picture>
-        <source loading="lazy" class="lazy" media="(min-width: 1200px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
-        <img loading="lazy" class="lazy" alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
+        <source loading="lazy" class="lazy lazyload" media="(min-width: 1200px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+        <img loading="lazy" class="lazy lazyload" alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
       </picture>
     </a>
   {{/if}}
