--- a/partials/author/widget-authortwitter.hbs
+++ b/partials/author/widget-authortwitter.hbs
@@ -1,6 +1,6 @@
 <!-- Start Twitter Widget -->
 <div class="widget twitter">
   <h4 class="title">Twitter</h4>
-  <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="105906/"></script>
+  <a class="twitter-timeline" href="https://twitter.com/toddrbirchard?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 <!-- End Twitter Widget -->
