--- a/custom-transactional.hbs
+++ b/custom-transactional.hbs
@@ -9,6 +9,7 @@
 					<a href="{{@site.url}}">
 						<button type="submit" label="submit" class="btn btn-primary">Back home</button>
 					</a>
+					<div id="rss-feeds"></div>
 				</main>
 			</div>
 		</section>
