--- a/partials/author/author-sidebar.hbs
+++ b/partials/author/author-sidebar.hbs
@@ -2,13 +2,13 @@
 <div class="sidebar" class="{{primary_author.slug}}">
   {{> author/widget-authorwebsite}}
 	{{> author/widget-authorgithub}}
-	{{> author/widget-medium}}
+	{{!--{{> author/widget-medium}}--}}
 	{{> author/widget-meetup}}
 	{{> author/widget-rss}}
 	{{#has slug="todd"}}
 		{{> author/widget-authortwitter}}
 	{{else}}
-        {{> author/widget-authortwitter}}
+    {{> author/widget-authortwitter}}
 	{{/has}}
 </div>
 <!-- End Author Sidebar -->
