--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -64,7 +64,7 @@
 		box-sizing: border-box;
 		height: fit-content;
 		display: block;
-		margin: 0 auto 10px;
+		margin: 0 0 2px;
 		transition: @transition;
 
 		img {
