--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -1,6 +1,6 @@
 <!-- Start Post Preview -->
 <article class="post-preview {{#primary_author}}{{slug}}{{/primary_author}}">
-  <a href="{{url}}">
+  <a href="{{url}}" class="post-image">
     {{#if featured}}
       <div class="featured">
         <i class="far fa-star"></i>
@@ -8,11 +8,7 @@
     {{/if}}
 
     {{#if feature_image}}
-      <picture class="post-image">
-        <source class="lazy lazyload" alt="{{title}}" loading="lazy" media="(max-width: 600px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
-        <source class="lazy lazyload" alt="{{title}}" loading="lazy" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
-        <img class="lazy lazyload" alt="{{title}}" loading="lazy" src="{{img_url feature_image}}">
-      </picture>
+      <img class="featured-image lazyload" alt="{{title}}" loading="lazy" src="{{img_url feature_image}}">
     {{/if}}
 
     <div class="content">
