--- a/src/less/global/widgets/series-widget.less
+++ b/src/less/global/widgets/series-widget.less
@@ -84,6 +84,7 @@
     font-family: @bold-font;
     display: flex;
     align-items: center;
+    padding: 0 10px;
     @media(max-width: 950px) {
       font-size: 14px;
     }
